[project]
name = "my_distance"
version = "0.1.0"
description = "Calcul de distance entre deux points d'un plan 2D (Flask)"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
]

[dependency-groups]
dev = [
    "dotenv>=0.9.9",
    "locust>=2.43.4",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "selenium>=4.40.0",
    "testcontainers>=4.14.2",
]
